# advent_of_code_2024

./: README.md  init_day.zsh
day_0/: CMakeLists.txt  aoc.hpp  day_0.cpp  init_tool_chain.zsh  pull_data.zsh  pull_text.zsh
day_1/: day_1.cpp
day_10/: CMakeLists.txt  aoc.hpp  day_10.cpp
day_11/: aoc.hpp  day_11.cpp
day_12/: aoc.hpp  day_12.cpp
day_13/: aoc.hpp  day_13.cpp
day_14/: aoc.hpp  day_14.cpp
day_15/: aoc.hpp  day_15.cpp
day_16/: aoc.hpp  day_16.cpp
day_17/: aoc.hpp  day_17.cpp
day_18/: aoc.hpp  day_16.txt  day_18.cpp  day_18.txt  pull_text.zsh
day_19/: aoc.hpp  day_19.cpp
day_2/: day_2.cpp
day_20/: day_20.cpp
day_21/: aoc.hpp  day_21.cpp
day_22/: day_22.cpp
day_23/: CMakeLists.txt  aoc.hpp  day_23.cpp
day_24/: aoc.hpp  day_24.cpp
day_25/: aoc.hpp  day_25.cpp
day_3/: day_3.cpp
day_4/: day_4.cpp
day_5/: day_5.cpp
day_6/: CMakeLists.txt  day_6.cpp
day_7/: day_7.cpp
day_8/: aoc.hpp  day_8.cpp
day_9/: day_9.cpp
